--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  error: "Sorry, no data found"
   static_pages:
     home:
       home: "HOME"
@@ -45,6 +46,8 @@ en:
     new:
       sign: "SIGN UP"
       title: "This will be a signup page for new users."
+      create: "Create my account"
+      label: "Confirmation"
   layouts:
     footer:
       title: "The"
@@ -66,3 +69,6 @@ en:
   helpers:
     application_helper:
       title: "Ruby on Rails Tutorial Sample App"
+  shared:
+    error_messages:    
+      form: "The form contains"
