--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,28 @@
 en:
   error: "Sorry, no data found"
   error1: "Invalid email/password combination"
+  update: "Profile updated"
+  please: "Please log in."
+  delete: "User deleted"
+  undelete: "unsuccess delete"
+  check: "Please check your email to activate your account."
+  check_link: "Account not activated. Check your email for the activation link."
+  activated: "Account activated!"
+  invalid: "Invalid activation link"
+  click: "Welcome to the Sample App! Click on the link below to activate your account:"
+  ac: "Activate"
+  activation: "Account activation"
+  pwd_re: "Password reset"
+  hi: "Hi"
+  link: "to@example.org"
+  forgot: "Forgot password"
+  email: "Email sent with password reset instructions"
+  note: "Email address not found"
+  submit: "Submit"
+  reset_pwd: "To reset your password click the link below:"
+  this: "This link will expire in two hours."
+  if: "If you did not request your password to be reset, please ignore this email and 
+  your password will stay as it is."
   static_pages:
     home:
       home: "HOME"
@@ -49,6 +71,20 @@ en:
       title: "This will be a signup page for new users."
       create: "Create my account"
       label: "Confirmation"
+    edit:
+      edit: "Edit user"
+      save: "Save changes"
+      update: "Update your profile"
+    index:
+      all: "All users"
+    user:
+      delete_u: "delete"
+      confirm: "You sure?"
+    footer:
+      name: "Name"
+      email: "Email"
+      password: "Password"
+      password_confirmation: "Password_confirmation"
   layouts:
     footer:
       title: "The"
@@ -82,3 +118,4 @@ en:
     new:
       new_user: "New user? "
       remember: "Remember me on this computer"
+      pwd: "forgot password"
