--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,24 @@ en:
   hi: "Hi"
   link: "to@example.org"
   err: "error"
+  submit: "Submit"
+  email_sent: "Email sent with password reset instructions"
+  not_email: "Email address not found"
+  pwd_reset: "Password reset"
+  reset_pwd: "Reset password"
+  click_reset: "To reset your password click the link below:"
+  hours: "This link will expire in two hours."
+  if_pwd: "If you did not request your password to be reset, please ignore this email and
+your password will stay as it is."
+  update_pwd: "Update password"
+  emply: "can't be empty"
+  pass: "Password has been reset."
+  pass_ex: "Password reset has expired."
+  this_link: "This link will expire in two hours."
+  if_you: "If you did not request your password to be reset, please ignore this email and
+your password will stay as it is."
+  email_noac: "Email not activated"
+  to_reset: "To reset your password click the link below:"
   static_pages:
     home:
       home: "HOME"
@@ -110,3 +128,4 @@ en:
     new:
       new_user: "New user? "
       remember: "Remember me on this computer"
+      forgot: "Forgot password"
