--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,21 @@ your password will stay as it is."
 your password will stay as it is."
   email_noac: "Email not activated"
   to_reset: "To reset your password click the link below:"
+  posted: "Posted"
+  ago: "ago."
+  microposts: "Microposts"
+  micropost: "micropost"
+  created_mi: "Micropost created!"
+  view: "view my profile"
+  compose: "Compose new micropost..."
+  post: "Post"
+  the_form: "The form contains"
+  delete_mi: "Micropost deleted"
+  feed: "Micropost Feed"
+  not_delete: "Can't delete Micropost"
+  picture_5MB: "should be less than 5MB"
+  change: "change"
+  max_file: "Maximum file size is 5MB. Please choose a smaller file."
   static_pages:
     home:
       home: "HOME"
